vlib/v/checker/tests/oct_lit_wrong_digit_err.vv
fn main() {
    println(0o1118)
}
